--- a/taskman/pom.xml
+++ b/taskman/pom.xml
@@ -26,6 +26,12 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.9.Final</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/oracle/oracle-jdbc -->
         <dependency>
             <groupId>com.oracle</groupId>
