--- a/taskman/src/main/resources/database.properties
+++ b/taskman/src/main/resources/database.properties
@@ -6,3 +6,4 @@ hibernate.pool_size = 8
 hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
 hibernate.show_sql = false
 hibernate.current_session_context_class = thread
+hibernate.proc.param_null_passing = true
