Spring data jpa

--- a/taskman/src/main/resources/application.properties
+++ b/taskman/src/main/resources/application.properties
@@ -2,4 +2,12 @@ server.port = 8189
 server.servlet.context-path = /app
 spring.thymeleaf.encoding = UTF-8
 
-#spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate4.SpringSessionContext
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.proc.param_null_passing = true
+
+spring.datasource.driver-class-name = oracle.jdbc.OracleDriver
+spring.datasource.url = jdbc:oracle:thin:@desktop-779t2cr:1521:xe
+spring.datasource.username = taskman
+spring.datasource.password = taskman
