--- a/taskmangwt/spring/src/main/resources/application.properties
+++ b/taskmangwt/spring/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8189
-server.servlet.context-path=/gwt-rest
+server.servlet.context-path=/barkapp
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
