--- a/taskmangwt/spring/src/main/resources/application.properties
+++ b/taskmangwt/spring/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8189
-server.servlet.context-path=/gwt-rest
+server.servlet.context-path=/barkapp
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle12cDialect
@@ -10,3 +10,5 @@ spring.datasource.driver-class-name = oracle.jdbc.OracleDriver
 spring.datasource.url = jdbc:oracle:thin:@desktop-779t2cr:1521:xe
 spring.datasource.username = taskman
 spring.datasource.password = taskman
+
+jwt.secret=barksecret
